# posts-api

./: Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
migrations/: 20231225215036_setup.sql  20231225215829_create_table_user.sql  20231225220148_create_table_post.sql
src/: config.rs  main.rs
src/http/: error.rs  extractor.rs  mod.rs  posts.rs  users.rs
