[package]
name = "posts-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
axum = "0.7.2"
clap = { version = "4.4.11", features = ["derive", "env"] }
dotenvy = "0.15.7"
env_logger = "0.10.1"
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "postgres", "uuid", "time"] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
