[package]
name = "posts-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
async-trait = "0.1.75"
axum = "0.7.2"
axum-extra = { version = "0.9.0", features = ["typed-header"] }
clap = { version = "4.4.11", features = ["derive", "env"] }
dotenvy = "0.15.7"
env_logger = "0.10.1"
jsonwebtoken = "9.2.0"
log = "0.4.20"
serde = { version = "1.0.193", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "postgres", "uuid", "time"] }
thiserror = "1.0.52"
time = "0.3.31"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.0", features = ["trace"] }
uuid = { version = "1.6.1", features = ["serde"] }
